--- a/movieVue/src/main/resources/log4j.properties
+++ b/movieVue/src/main/resources/log4j.properties
@@ -1,19 +1,21 @@
-log4j.appender.sout=org.apache.log4j.ConsoleAppender
-log4j.appender.sout.layout=org.apache.log4j.PatternLayout
-log4j.appender.sout.layout.ConversionPattern=[%p]-[%m]-[%l]-[%d]%n
+log4j.rootLogger=INFO, R, stdout
 
-#log4j.appender.sfile=org.apache.log4j.FileAppender
-#log4j.appender.sfile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.sfile.layout.ConversionPattern=[%p]-[%m]-[%l]-[%d]%n
-#log4j.appender.sfile.file=D:/bbs.log
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
-#log4j.appender.sday=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.sday.layout=org.apache.log4j.PatternLayout
-#log4j.appender.sday.layout.ConversionPattern=[%p]-[%m]-[%l]-[%d]%n
-#log4j.appender.sday.file=D:/bbs.log
-#log4j.appender.sday.DatePattern='.'yyyy-MM-dd
-#log4j.appender.sday.Threshold=error
-#log4j.logger.org.apache.ibatis.logging=info
-#log4j.category.org.apache.ibatis=info
-log4j.category.org.springframework=info
-log4j.rootLogger=debug,sout
+# Print the date in ISO 8601 format
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=application.log
+
+log4j.appender.R.MaxFileSize=100KB
+# Keep one backup file
+log4j.appender.R.MaxBackupIndex=1
+
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+
+log4j.logger.org.springframework.security=debug
+log4j.logger.com.frapaego=@log4j.level@
+
