--- a/movieVue/pom.xml
+++ b/movieVue/pom.xml
@@ -160,11 +160,16 @@
 
         <!--java ee 7 facilities -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
+	      <groupId>javax.servlet</groupId>
+	      <artifactId>javax.servlet-api</artifactId>
+	      <version>3.1.0</version>
+	      <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>jstl</groupId>
+	      <artifactId>jstl</artifactId>
+	      <version>1.2</version>
+	    </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>javax.transaction-api</artifactId>
@@ -339,6 +344,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+	      <groupId>commons-fileupload</groupId>
+	      <artifactId>commons-fileupload</artifactId>
+<!-- 	      <version>1.3.1</version> -->
+	    </dependency>
         
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
